--- a/styles.css
+++ b/styles.css
@@ -469,7 +469,7 @@ footer {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 500px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 #paypal-container-4BD399W5TD2KA {
